layout fix for header nav on mobile

--- a/styles/workshop.css
+++ b/styles/workshop.css
@@ -194,6 +194,12 @@
   }
 }
 
+.mcode-name {
+  @media (--xxs) {
+    display: none;
+  }
+}
+
 @keyframes pulse {
   0% {
     transform: scale(0.75);
